Enhance project structure by updating .gitignore to include Python-related files and application data, refine project description in pyproject.toml, and add comprehensive README.md detailing features, setup, and usage instructions for the CV Tailoring Dashboard.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,21 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+ENV/
+
+# Application data
+applications/*.json
+cv_history/*.html
+cv_history/*.pdf
+
+# Config (contains API keys)
+config.json
