--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,13 @@
 [project]
 name = "open-cv-gen"
 version = "0.1.0"
-description = "Add your description here"
+description = "AI-powered CV tailoring dashboard"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "playwright>=1.56.0",
+    "flask>=3.0.0",
+    "openai>=1.0.0",
+    "python-dotenv>=1.0.0",
+    "beautifulsoup4>=4.12.0",
 ]
